MULE-17541: Lazy init: <object class=... '/> not lazy initialized (#851)
(cherry picked from commit 9ea4a9d302ee7c9e16721b6a1eaf0abe8beb8060)
(cherry picked from commit 0e0cd4dca2dcf9effb01c96fcbfb2dd69fe6d0b0)
(cherry picked from commit dfda4f7b2fe94a529eba332682d2110744e80fb3)

--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -133,6 +133,14 @@
             <classifier>mule-plugin</classifier>
         </dependency>
         <dependency>
+            <groupId>org.mule.module</groupId>
+            <artifactId>mule-java-module</artifactId>
+            <version>${muleJavaModuleTestVersion}</version>
+            <classifier>mule-plugin</classifier>
+            <!-- TODO MULE-14466: BeanCreationException could not autowire JavaModuleLoadingCache -->
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.mule.connectors</groupId>
             <artifactId>mule-file-connector</artifactId>
             <version>${muleFileConnectorTestVersion}</version>
