--- a/performance/pom.xml
+++ b/performance/pom.xml
@@ -199,6 +199,28 @@
     </dependencies>
     <profiles>
         <profile>
+            <id>sanity</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <systemPropertyVariables>
+                                <enablePerformanceTests>false</enablePerformanceTests>
+                                <contiperf.active>false</contiperf.active>
+                                <jmh.ignoreLock>true</jmh.ignoreLock>
+                            </systemPropertyVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
             <id>performance</id>
             <build>
                 <plugins>
@@ -218,9 +240,6 @@
         </profile>
         <profile>
             <id>micro-benchmark</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
             <build>
                 <plugins>
                     <plugin>
@@ -231,7 +250,6 @@
                                 <enablePerformanceTests>false</enablePerformanceTests>
                                 <contiperf.active>false</contiperf.active>
                                 <mule.test.timeoutSecs>300</mule.test.timeoutSecs>
-                                <jmh.ignoreLock>true</jmh.ignoreLock>
                             </systemPropertyVariables>
                         </configuration>
                     </plugin>
