--- a/performance/pom.xml
+++ b/performance/pom.xml
@@ -193,6 +193,27 @@
     </dependencies>
     <profiles>
         <profile>
+            <id>sanity</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <systemPropertyVariables>
+                                <enablePerformanceTests>false</enablePerformanceTests>
+                                <jmh.ignoreLock>true</jmh.ignoreLock>
+                            </systemPropertyVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
             <id>performance</id>
             <build>
                 <plugins>
