--- a/munit-tests/pom.xml
+++ b/munit-tests/pom.xml
@@ -16,6 +16,39 @@
         <formatterConfigPath>../formatter.xml</formatterConfigPath>
     </properties>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <inherited>true</inherited>
+                <configuration>
+                    <systemPropertyVariables>
+                        <mule.flowReference.matchesAny>false</mule.flowReference.matchesAny>
+                    </systemPropertyVariables>
+                </configuration>
+                <executions>
+                    <execution>
+                        <!-- This second execution is needed to properly run the tests that rely on the set system property -->
+                        <!-- Since the system property is read during extension model generation, which runs before the test rules, -->
+                        <!-- it has to be set at JVM start time. -->
+                        <id>flowReferenceMatchesAny</id>
+                        <inherited>true</inherited>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                        <phase>test</phase>
+                        <configuration>
+                            <systemPropertyVariables>
+                                <mule.flowReference.matchesAny>true</mule.flowReference.matchesAny>
+                            </systemPropertyVariables>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>org.mule.runtime</groupId>
