--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
       
     <munitExtensionsMavenPlugin>1.0.0</munitExtensionsMavenPlugin>
 
+    <apacheHttpCoreVersion>4.4.14</apacheHttpCoreVersion>
     <apacheHttpClientVersion>4.5.13</apacheHttpClientVersion>
     <springVersion>5.1.6.RELEASE</springVersion>
     <muleDependenciesVersion>1.x-SNAPSHOT</muleDependenciesVersion>
