MULE-19264: configured parameters are not injected at all

--- a/dsl/pom.xml
+++ b/dsl/pom.xml
@@ -125,6 +125,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.mule.tests</groupId>
+            <artifactId>mule-petstore-extension</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.mule.modules</groupId>
             <artifactId>mule-oauth-module</artifactId>
             <classifier>mule-plugin</classifier>
