--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -261,6 +261,12 @@
         </dependency>
         <dependency>
             <groupId>org.mule.tests</groupId>
+            <artifactId>mule-reconnection-test-extension</artifactId>
+            <version>${project.version}</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
+        <dependency>
+            <groupId>org.mule.tests</groupId>
             <artifactId>mule-tx-extension</artifactId>
             <version>${project.version}</version>
             <classifier>mule-plugin</classifier>
