--- a/tooling-support-tests/pom.xml
+++ b/tooling-support-tests/pom.xml
@@ -94,7 +94,7 @@
                 <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>copy-agent-mule-LATEST</id>
+                        <id>copy-weave-service</id>
                         <phase>process-test-resources</phase>
                         <goals>
                             <goal>unpack</goal>
