Adding localisation properties extension test

--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -240,6 +240,12 @@
             <version>${project.version}</version>
             <classifier>mule-plugin</classifier>
         </dependency>
+        <dependency>
+            <groupId>org.mule.tests</groupId>
+            <artifactId>test-localisation-properties-extension</artifactId>
+            <version>${project.version}</version>
+            <classifier>mule-plugin</classifier>
+        </dependency>
 
         <dependency>
             <groupId>org.mule.tests</groupId>
