--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,7 @@
                         <exclude>org.mule.modules:mule-spring-module-tests</exclude>
                         <exclude>org.mule.modules:mule-spring-test-plugin</exclude>
                         <exclude>org.mule.tests:test-components</exclude>
+                        <exclude>org.mule.tooling:tooling-support-test-extension</exclude>
                       </excludes>
                     </requireReleaseDeps>
                     <requireReleaseVersion>
