MULE-19728: Add groovy dependency to integration tests so that the engine is available (#1549)

--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -19,6 +19,7 @@
         <activemqVersion>5.15.3</activemqVersion>
         <hawtbufVersion>1.1</hawtbufVersion>
         <activemqProtobuf>1.1</activemqProtobuf>
+        <groovy.version>2.4.16</groovy.version>
     </properties>
 
     <build>
@@ -365,6 +366,14 @@
             <artifactId>test-components</artifactId>
             <version>${muleTestComponentsVersion}</version>
             <classifier>mule-plugin</classifier>
+            <scope>test</scope>
+        </dependency>
+        <!--Groovy-->
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>${groovy.version}</version>
+            <classifier>indy</classifier>
             <scope>test</scope>
         </dependency>
     </dependencies>
