--- a/extensions-xml-support/pom.xml
+++ b/extensions-xml-support/pom.xml
@@ -24,6 +24,12 @@
     <dependencies>
         <dependency>
             <groupId>org.mule.runtime</groupId>
+            <artifactId>mule-module-spring-config</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mule.runtime</groupId>
             <artifactId>mule-module-extensions-xml-support</artifactId>
             <version>${project.version}</version>
             <scope>provided</scope>
