--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -145,6 +145,7 @@
         <dependency>
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-broker</artifactId>
+            <version>${activemqVersion}</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
