--- a/soap-connect/soap-extension/pom.xml
+++ b/soap-connect/soap-extension/pom.xml
@@ -65,4 +65,12 @@
             </plugin>
         </plugins>
     </build>
+    
+    <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.27</version>
+        </dependency>
+    </dependencies>
 </project>
