--- a/soap-connect/integration-tests/pom.xml
+++ b/soap-connect/integration-tests/pom.xml
@@ -76,6 +76,12 @@
         </dependency>
         <dependency>
             <groupId>org.mule.runtime</groupId>
+            <artifactId>mule-module-spring-config</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mule.runtime</groupId>
             <artifactId>mule-api</artifactId>
             <scope>provided</scope>
         </dependency>
