MULE-19967: Add DW script validations

--- a/dsl/pom.xml
+++ b/dsl/pom.xml
@@ -266,5 +266,11 @@
             <version>${jsonassert.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.codejargon.feather</groupId>
+            <artifactId>feather</artifactId>
+            <version>1.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
