--- a/logging/pom.xml
+++ b/logging/pom.xml
@@ -53,6 +53,12 @@
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mule.tests</groupId>
+            <artifactId>mule-tests-allure</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
         
         <!-- Include all Mule Modules -->
         <dependency>
