W-10781615 - Support injection (@Inject) of the SDK API Object Store Manager

--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -57,6 +57,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.mule.sdk</groupId>
+            <artifactId>mule-sdk-api</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- Include all Mule Modules -->
         <dependency>
             <groupId>org.mule.runtime</groupId>
