--- a/dsl/pom.xml
+++ b/dsl/pom.xml
@@ -19,7 +19,6 @@
         <javaxJmsApiVersion>2.0.1</javaxJmsApiVersion>
 
         <formatterConfigPath>../formatter.xml</formatterConfigPath>
-        <jsonassert.version>1.5.0</jsonassert.version>
     </properties>
 
     <build>
@@ -263,7 +262,11 @@
         <dependency>
             <groupId>org.skyscreamer</groupId>
             <artifactId>jsonassert</artifactId>
-            <version>${jsonassert.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
