--- a/oauth/pom.xml
+++ b/oauth/pom.xml
@@ -198,6 +198,11 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
             <version>${apacheHttpClientVersion}</version>
