--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,8 @@
 
     <muleDependenciesVersion>1.x-SNAPSHOT</muleDependenciesVersion>
     <muleTestComponentsVersion>4.4.1-SNAPSHOT</muleTestComponentsVersion>
-    <muleSdkCompatibilityApiVersion>1.0.0-SNAPSHOT</muleSdkCompatibilityApiVersion>
-    <muleSdkApiVersion>1.0.0-SNAPSHOT</muleSdkApiVersion>
+    <muleSdkCompatibilityApiVersion>0.5.0</muleSdkCompatibilityApiVersion>
+    <muleSdkApiVersion>0.5.0</muleSdkApiVersion>
   </properties>
 
   <build>
