--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,8 @@
     <apacheHttpClientVersion>4.5.13</apacheHttpClientVersion>
     <springVersion>5.1.6.RELEASE</springVersion>
     <muleDependenciesVersion>1.x-SNAPSHOT</muleDependenciesVersion>
-    <muleSdkCompatibilityApiVersion>1.0.0-SNAPSHOT</muleSdkCompatibilityApiVersion>
-    <muleSdkApiVersion>1.0.0-SNAPSHOT</muleSdkApiVersion>
+    <muleSdkCompatibilityApiVersion>0.5.0</muleSdkCompatibilityApiVersion>
+    <muleSdkApiVersion>0.5.0</muleSdkApiVersion>
   </properties>
 
   <build>
