--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -22,6 +22,7 @@
         <groovy.version>2.4.21</groovy.version>
         <muleTracingModuleVersion>1.0.0</muleTracingModuleVersion>
         <muleScriptingModuleVersion>2.0.1</muleScriptingModuleVersion>
+        <oauthProviderModuleVersion>${parent.version}</oauthProviderModuleVersion>
     </properties>
 
     <build>
@@ -40,6 +41,11 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180130</version>
+        </dependency>
         <dependency>
             <groupId>org.mule.runtime</groupId>
             <artifactId>mule-core</artifactId>
@@ -108,6 +114,13 @@
         </dependency>
 
         <!-- Mule Plugins -->
+        <dependency>
+            <groupId>com.mulesoft.modules</groupId>
+            <artifactId>mule-oauth2-provider-module</artifactId>
+            <version>1.1.0-SNAPSHOT</version>
+            <classifier>mule-plugin</classifier>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.mule.modules</groupId>
             <artifactId>mule-validation-module</artifactId>
@@ -378,6 +391,12 @@
             <artifactId>groovy-all</artifactId>
             <version>${groovy.version}</version>
             <classifier>indy</classifier>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mule.tests</groupId>
+            <artifactId>mule-test-oauth-extension</artifactId>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
