--- a/oauth/pom.xml
+++ b/oauth/pom.xml
@@ -59,6 +59,13 @@
 
         <!-- Test dependencies -->
         <dependency>
+            <groupId>com.mulesoft.modules</groupId>
+            <artifactId>mule-oauth2-provider-module</artifactId>
+            <version>1.1.0-SNAPSHOT</version>
+            <classifier>mule-plugin</classifier>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.mule.services</groupId>
             <artifactId>mule-service-http</artifactId>
             <version>1.7.0-SNAPSHOT</version>
