--- a/extensions-mule-support/pom.xml
+++ b/extensions-mule-support/pom.xml
@@ -79,4 +79,17 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <systemPropertyVariables>
+                        <mule.experimental.enableMuleSdk>true</mule.experimental.enableMuleSdk>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
