--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -22,6 +22,8 @@
         <groovy.version>2.4.21</groovy.version>
         <muleTracingModuleVersion>1.0.0</muleTracingModuleVersion>
         <muleScriptingModuleVersion>2.0.1</muleScriptingModuleVersion>
+        <protobufVersion>3.21.9</protobufVersion>
+        <openTelemetryProtoVersion>0.3.0</openTelemetryProtoVersion>
     </properties>
 
     <build>
@@ -352,7 +354,24 @@
             <artifactId>commons-text</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>${protobufVersion}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.opentelemetry</groupId>
+            <artifactId>opentelemetry-proto</artifactId>
+            <version>${openTelemetryProtoVersion}</version>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.protobuf</groupId>
+                    <artifactId>protobuf-java</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
         <dependency>
             <groupId>org.mule.tests</groupId>
             <artifactId>mule-tests-infrastructure</artifactId>
