--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -374,7 +374,11 @@
             <artifactId>commons-text</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.mule.runtime</groupId>
+            <artifactId>mule-tracer-exporter-configuration-api</artifactId>
+            <version>4.5.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.mule.tests</groupId>
             <artifactId>mule-tests-infrastructure</artifactId>
